尝试github自动部署到七牛云

--- a/.github/workflows/qiniudeploy.yml
+++ b/.github/workflows/qiniudeploy.yml
@@ -34,6 +34,7 @@ jobs:
             ${{ runner.os }}-yarn-
       - run: yarn install
       - run: yarn build
+      - run: next start
       - run: npx next export
       - name: deploy
         uses: maqi1520/action-qiniu-upload@master
