--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mdx-bundler": "^9.0.0",
     "next": "12.1.6",
     "next-contentlayer": "0.2.5",
+    "next-optimized-images": "^2.6.2",
     "next-themes": "^0.0.14",
     "postcss": "^8.4.5",
     "preact": "^10.6.2",
