--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "image-size": "1.0.0",
     "mdx-bundler": "^9.0.0",
     "next": "12.1.6",
+    "next-compose-plugins": "^2.2.1",
     "next-contentlayer": "0.2.5",
     "next-optimized-images": "^2.6.2",
     "next-themes": "^0.0.14",
