--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "12.1.6",
     "next-compose-plugins": "^2.2.1",
     "next-contentlayer": "0.2.5",
+    "next-images": "^1.8.5",
     "next-optimized-images": "^2.6.2",
     "next-themes": "^0.0.14",
     "postcss": "^8.4.5",
